--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,94 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 2rem;
+  font-family: sans-serif;
+  color: #272728;
+  font-family: "Quicksand";
+  font-weight: 500;
+  background-color: #f9f5e7;
+}
+
+.app {
+  max-width: 90rem;
+  margin: 0 auto;
+}
+
+h1 {
+  text-align: center;
+  background-color: #eddbc7;
+  font-size: 8rem;
+  text-transform: uppercase;
+  font-weight: 400;
+  word-spacing: 30px;
+  letter-spacing: -5px;
+  padding: 2.4rem 0;
+}
+
+.form {
+  display: flex;
+  gap: 2rem;
+  padding: 2.4rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.form-add {
+  display: flex;
+  gap: 1rem;
+}
+
+button,
+input {
+  background-color: #eddbc7;
+  color: inherit;
+  font-family: inherit;
+  border: none;
+  border-radius: 1rem;
+  padding: 0.8rem 1.2rem;
+  font-weight: 700;
+  font-size: 1.8rem;
+  cursor: pointer;
+}
+
+input[type="checkbox"] {
+  height: 2rem;
+  width: 2rem;
+  accent-color: #eed3d9;
+}
+
+.list {
+  padding: 4rem 12rem;
+
+  background-color: #f8ead8;
+
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 3.2rem;
+}
+
+.checked-list {
+  padding: 4rem 12rem;
+
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 3.2rem;
+}
+
+.item {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
 }
