--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,8 @@ h1 {
   padding: 2.4rem;
   align-items: center;
   justify-content: center;
+
+  transition: all 0.3s ease;
 }
 
 .form-add {
@@ -76,6 +78,8 @@ input[type="checkbox"] {
   justify-content: center;
   flex-direction: column;
   gap: 3.2rem;
+
+  transition: all 0.3s ease;
 }
 
 .checked-list {
@@ -85,6 +89,8 @@ input[type="checkbox"] {
   justify-content: center;
   flex-direction: column;
   gap: 3.2rem;
+
+  transition: all 0.3s ease;
 }
 
 .item {
